path planning code updated

--- a/PathPlanning.ipynb
+++ b/PathPlanning.ipynb
@@ -2,6 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello from Parent! And hello from Child!\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "class Parent:\n",
+    "    def greet(self):\n",
+    "        return \"Hello from Parent!\"\n",
+    "\n",
+    "class Child(Parent):\n",
+    "    def greet(self):\n",
+    "        return super().greet() + \" And hello from Child!\"\n",
+    "\n",
+    "x = Child()\n",
+    "print(x.greet())  # Outputs: Hello from Parent! And hello from Child!"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
@@ -67,6 +94,13 @@
     "\n",
     "\t\tself.printSolution(dist)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
