--- a/PathPlanning.ipynb
+++ b/PathPlanning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -28,8 +28,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Python program for Dijkstra's single source shortest path algorithm. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,13 +103,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -149,10 +149,297 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Clicked at 1400 320\n",
+      "Table (200, 320) is active\n",
+      "Table (200, 320) coordinates: (200, 320)\n",
+      "Shortest path: [(200, 320), (1400, 320)]\n",
+      "Command: 1200 \n",
+      "Clicked at 1400 320\n",
+      "Table (200, 320) is active\n",
+      "Table (200, 320) coordinates: (200, 320)\n",
+      "Shortest path: [(200, 320), (1400, 320)]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in Tkinter callback\n",
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Users\\hbgal\\miniconda3\\envs\\py310\\lib\\tkinter\\__init__.py\", line 1921, in __call__\n",
+      "    return self.func(*args)\n",
+      "  File \"C:\\Users\\hbgal\\AppData\\Local\\Temp\\ipykernel_33144\\3005658280.py\", line 167, in <lambda>\n",
+      "    canvas.tag_bind(table, \"<Button-1>\", lambda event, x=center_x, y=center_y: table_clicked(x, y + table_size // 2 + 20, canvas))\n",
+      "  File \"C:\\Users\\hbgal\\AppData\\Local\\Temp\\ipykernel_33144\\3005658280.py\", line 85, in table_clicked\n",
+      "    text_to_speech(COMMAND_FULL)\n",
+      "  File \"C:\\Users\\hbgal\\AppData\\Local\\Temp\\ipykernel_33144\\3005658280.py\", line 22, in text_to_speech\n",
+      "    tts.save(\"C:/Users/yasir/Downloads/output.mp3\")\n",
+      "  File \"c:\\Users\\hbgal\\miniconda3\\envs\\py310\\lib\\site-packages\\gtts\\tts.py\", line 334, in save\n",
+      "    with open(str(savefile), \"wb\") as f:\n",
+      "FileNotFoundError: [Errno 2] No such file or directory: 'C:/Users/yasir/Downloads/output.mp3'\n",
+      "Exception in Tkinter callback\n",
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Users\\hbgal\\miniconda3\\envs\\py310\\lib\\tkinter\\__init__.py\", line 1921, in __call__\n",
+      "    return self.func(*args)\n",
+      "  File \"c:\\Users\\hbgal\\miniconda3\\envs\\py310\\lib\\tkinter\\__init__.py\", line 839, in callit\n",
+      "    func(*args)\n",
+      "  File \"C:\\Users\\hbgal\\AppData\\Local\\Temp\\ipykernel_33144\\3005658280.py\", line 34, in play_welcome_phrase\n",
+      "    text_to_speech(\" Hi \")\n",
+      "  File \"C:\\Users\\hbgal\\AppData\\Local\\Temp\\ipykernel_33144\\3005658280.py\", line 22, in text_to_speech\n",
+      "    tts.save(\"C:/Users/yasir/Downloads/output.mp3\")\n",
+      "  File \"c:\\Users\\hbgal\\miniconda3\\envs\\py310\\lib\\site-packages\\gtts\\tts.py\", line 334, in save\n",
+      "    with open(str(savefile), \"wb\") as f:\n",
+      "FileNotFoundError: [Errno 2] No such file or directory: 'C:/Users/yasir/Downloads/output.mp3'\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Command: 1200 \n",
+      "Clicked at 1400 320\n",
+      "Table (200, 320) is active\n",
+      "Table (200, 320) coordinates: (200, 320)\n",
+      "Shortest path: [(200, 320), (1400, 320)]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in Tkinter callback\n",
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Users\\hbgal\\miniconda3\\envs\\py310\\lib\\tkinter\\__init__.py\", line 1921, in __call__\n",
+      "    return self.func(*args)\n",
+      "  File \"C:\\Users\\hbgal\\AppData\\Local\\Temp\\ipykernel_33144\\3005658280.py\", line 167, in <lambda>\n",
+      "    canvas.tag_bind(table, \"<Button-1>\", lambda event, x=center_x, y=center_y: table_clicked(x, y + table_size // 2 + 20, canvas))\n",
+      "  File \"C:\\Users\\hbgal\\AppData\\Local\\Temp\\ipykernel_33144\\3005658280.py\", line 85, in table_clicked\n",
+      "    text_to_speech(COMMAND_FULL)\n",
+      "  File \"C:\\Users\\hbgal\\AppData\\Local\\Temp\\ipykernel_33144\\3005658280.py\", line 22, in text_to_speech\n",
+      "    tts.save(\"C:/Users/yasir/Downloads/output.mp3\")\n",
+      "  File \"c:\\Users\\hbgal\\miniconda3\\envs\\py310\\lib\\site-packages\\gtts\\tts.py\", line 334, in save\n",
+      "    with open(str(savefile), \"wb\") as f:\n",
+      "FileNotFoundError: [Errno 2] No such file or directory: 'C:/Users/yasir/Downloads/output.mp3'\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Command: 1200 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in Tkinter callback\n",
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Users\\hbgal\\miniconda3\\envs\\py310\\lib\\tkinter\\__init__.py\", line 1921, in __call__\n",
+      "    return self.func(*args)\n",
+      "  File \"C:\\Users\\hbgal\\AppData\\Local\\Temp\\ipykernel_33144\\3005658280.py\", line 167, in <lambda>\n",
+      "    canvas.tag_bind(table, \"<Button-1>\", lambda event, x=center_x, y=center_y: table_clicked(x, y + table_size // 2 + 20, canvas))\n",
+      "  File \"C:\\Users\\hbgal\\AppData\\Local\\Temp\\ipykernel_33144\\3005658280.py\", line 85, in table_clicked\n",
+      "    text_to_speech(COMMAND_FULL)\n",
+      "  File \"C:\\Users\\hbgal\\AppData\\Local\\Temp\\ipykernel_33144\\3005658280.py\", line 22, in text_to_speech\n",
+      "    tts.save(\"C:/Users/yasir/Downloads/output.mp3\")\n",
+      "  File \"c:\\Users\\hbgal\\miniconda3\\envs\\py310\\lib\\site-packages\\gtts\\tts.py\", line 334, in save\n",
+      "    with open(str(savefile), \"wb\") as f:\n",
+      "FileNotFoundError: [Errno 2] No such file or directory: 'C:/Users/yasir/Downloads/output.mp3'\n"
+     ]
+    }
+   ],
    "source": [
-    "### Python program for Dijkstra's single source shortest path algorithm. "
+    "import tkinter as tk\n",
+    "import math\n",
+    "from heapq import heappop, heappush\n",
+    "import random\n",
+    "from gtts import gTTS\n",
+    "import os\n",
+    "import pygame\n",
+    "import time\n",
+    "\n",
+    "# Define the centers of each table\n",
+    "table_locations = [(200, 200), (600, 200), (200, 600), (600, 600), (1000, 200), (1400, 200), (1000, 600), (1400, 600)]\n",
+    "\n",
+    "table_points = []\n",
+    "destination_points = []\n",
+    "\n",
+    "COMMAND_FULL = \"\"\n",
+    "\n",
+    "active_location = (200,320)\n",
+    "\n",
+    "def text_to_speech(text, lang='en'):\n",
+    "    tts = gTTS(text=text, lang=lang)\n",
+    "    tts.save(\"C:/Users/yasir/Downloads/output.mp3\")\n",
+    "    pygame.init()\n",
+    "    pygame.mixer.init()\n",
+    "    pygame.mixer.music.load(\"C:/Users/yasir/Downloads/output.mp3\")\n",
+    "    pygame.mixer.music.play()\n",
+    "    while pygame.mixer.music.get_busy():\n",
+    "        pygame.time.Clock().tick(10)\n",
+    "    pygame.mixer.music.stop()  # Stop the music\n",
+    "    pygame.mixer.quit()  # Unload the music\n",
+    "\n",
+    "def play_welcome_phrase():\n",
+    "    welcome_text = \"Welcome to the restaurant. Please select a table. To deliver the order\"\n",
+    "    text_to_speech(\" Hi \")\n",
+    "    text_to_speech(welcome_text)\n",
+    "\n",
+    "\n",
+    "def table_clicked(x, y, canvas):\n",
+    "    global COMMAND_FULL\n",
+    "    global active_location\n",
+    "    print(\"Clicked at\", x, y)\n",
+    "    print(\"Table\", str(active_location), \"is active\")\n",
+    "    print(\"Table\",str(active_location), \"coordinates:\", active_location)\n",
+    "\n",
+    "    canvas.create_oval(active_location[0] - 6, active_location[1] - 6, active_location[0] + 6, active_location[1] + 6, fill=\"cyan\")\n",
+    "\n",
+    "    # Calculate shortest path\n",
+    "    path = find_shortest_path((x, y), (active_location[0], active_location[1]))\n",
+    "    print(\"Shortest path:\", path)\n",
+    "    draw_path(path, canvas)  # Pass canvas to draw_path\n",
+    "    COMMAND = \"\"\n",
+    "    if len(path) == 2:\n",
+    "        COMMAND = COMMAND + str(abs(path[0][0] - path[1][0])) + \" \"\n",
+    "    else:\n",
+    "        COMMAND = COMMAND + str(abs(path[0][0] - path[1][0])) + \" \"\n",
+    "        if path[0][0] < path[2][0]:\n",
+    "            if path[1][1] < path[2][1]:\n",
+    "                COMMAND = COMMAND + str(\"R\") + \" \"\n",
+    "            else:\n",
+    "                COMMAND = COMMAND + str(\"L\") + \" \"\n",
+    "        else:\n",
+    "            if path[1][1] < path[2][1]:\n",
+    "                COMMAND = COMMAND + str(\"L\") + \" \"\n",
+    "            else:\n",
+    "                COMMAND = COMMAND + str(\"R\") + \" \"\n",
+    "        COMMAND = COMMAND + str(abs(path[1][1] - path[2][1])) + \" \"\n",
+    "        if path[1][1] < path[3][1]:\n",
+    "            if path[2][0] < path[3][0]:\n",
+    "                COMMAND = COMMAND + str(\"L\") + \" \"\n",
+    "            else:\n",
+    "                COMMAND = COMMAND + str(\"R\") + \" \"\n",
+    "        else:\n",
+    "            if path[2][0] < path[3][0]:\n",
+    "                COMMAND = COMMAND + str(\"R\") + \" \"\n",
+    "            else:\n",
+    "                COMMAND = COMMAND + str(\"L\") + \" \"\n",
+    "        COMMAND = COMMAND + str(abs(path[2][0] - path[3][0])) + \" \"\n",
+    "\n",
+    "    print(\"Command:\", COMMAND)\n",
+    "    COMMAND_FULL = \"COMMAND: \" + COMMAND\n",
+    "\n",
+    "    canvas.create_rectangle(0,20,1600,60, fill=\"white\")\n",
+    "    canvas.create_text(800,40, text = COMMAND_FULL, font=(\"Arial\", 20, \"bold\"), fill=\"#000000\")\n",
+    "\n",
+    "    text_to_speech(COMMAND_FULL)\n",
+    "    \n",
+    "    active_location = [x,y]\n",
+    "\n",
+    "def heuristic(a, b):\n",
+    "    return math.sqrt((b[0] - a[0])**2 + (b[1] - a[1])**2)\n",
+    "\n",
+    "def find_shortest_path(goal, start):\n",
+    "   path = []\n",
+    "   path.append(start)\n",
+    "   up_down = True\n",
+    "   if start[1] == goal[1]:\n",
+    "       up_down = False\n",
+    "\n",
+    "   left_pane = False\n",
+    "\n",
+    "   middle_pane = (start[0] + goal[0])//2\n",
+    "\n",
+    "   if goal[0] < middle_pane:\n",
+    "       left_pane = True\n",
+    "\n",
+    "   if up_down:\n",
+    "       if not left_pane:\n",
+    "           path.append((goal[0] - 200, start[1]))\n",
+    "           path.append((goal[0] - 200, goal[1]))\n",
+    "           path.append(goal)\n",
+    "       else:\n",
+    "           path.append((goal[0] + 200, start[1]))\n",
+    "           path.append((goal[0] + 200, goal[1]))\n",
+    "           path.append(goal)\n",
+    "   else:\n",
+    "         path.append((goal[0], goal[1]))\n",
+    "   \n",
+    "   return path\n",
+    "\n",
+    "def draw_path(path, canvas):  # Pass canvas to draw_path\n",
+    "    path_color = random.choice([\"red\", \"green\", \"blue\", \"yellow\", \"purple\", \"orange\", \"cyan\", \"magenta\", \"brown\", \"pink\"])\n",
+    "    if path:\n",
+    "        for i in range(len(path) - 1):\n",
+    "            x1, y1 = path[i]\n",
+    "            x2, y2 = path[i + 1]\n",
+    "            canvas.create_line(x1, y1, x2, y2, fill=path_color, width=4)\n",
+    "            time.sleep(1)\n",
+    "\n",
+    "def main():\n",
+    "    global table_points, destination_points, COMMAND_FULL\n",
+    "    root = tk.Tk()\n",
+    "    root.title(\"Restaurant Tables\")\n",
+    "\n",
+    "    canvas = tk.Canvas(root, width=1600, height=800)\n",
+    "    canvas.pack()\n",
+    "\n",
+    "    # Draw the grid\n",
+    "    for x in range(0, 1600, 20):\n",
+    "        canvas.create_line(x, 0, x, 1600, fill=\"lightgray\", tags=\"grid\")\n",
+    "    for y in range(0, 800, 20):\n",
+    "        canvas.create_line(0, y, 1600, y, fill=\"lightgray\", tags=\"grid\")\n",
+    "\n",
+    "    table_points = []  # Clear the table points array\n",
+    "    destination_points = []  # Clear the destination points array\n",
+    "\n",
+    "    # Use table_locations array to define the coordinates and size of each table\n",
+    "    for i, (center_x, center_y) in enumerate(table_locations, start=1):\n",
+    "        table_size = 200  # Define the size of each table\n",
+    "        x1 = center_x - table_size // 2\n",
+    "        y1 = center_y - table_size // 2\n",
+    "        x2 = center_x + table_size // 2\n",
+    "        y2 = center_y + table_size // 2\n",
+    "        table = canvas.create_rectangle(x1, y1, x2, y2, fill=\"#00FF80\")\n",
+    "        canvas.create_text(center_x, center_y, text=\"Table \" + str(i), font=(\"\", 20, \"bold\"), fill=\"#000000\")\n",
+    "\n",
+    "        # Draw blue dot under 1 grid point from each table\n",
+    "        dot_x = center_x\n",
+    "        dot_y = center_y + table_size // 2 + 20  # Offset by one grid point downwards\n",
+    "        if i == active_location:\n",
+    "            dot_color = \"cyan\"\n",
+    "        else:\n",
+    "            dot_color = \"blue\"\n",
+    "        canvas.create_oval(dot_x - 6, dot_y - 6, dot_x + 6, dot_y + 6, fill=dot_color)\n",
+    "        destination_points.append((dot_x, dot_y))\n",
+    "\n",
+    "        # Binding the click event to each table\n",
+    "        canvas.tag_bind(table, \"<Button-1>\", lambda event, x=center_x, y=center_y: table_clicked(x, y + table_size // 2 + 20, canvas))\n",
+    "\n",
+    "        # Calculate and add points inside the table to table_points array\n",
+    "        for x in range(x1, x2+20, 20):\n",
+    "            for y in range(y1, y2 + 20, 20):\n",
+    "                table_points.append((x, y))\n",
+    "\n",
+    "        for point in table_points:\n",
+    "            canvas.create_rectangle(point[0]-1, point[1]-1, point[0] + 1, point[1] + 1, fill=\"black\")\n",
+    "\n",
+    "    root.after(100, play_welcome_phrase)\n",
+    "\n",
+    "    root.mainloop()\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()\n"
    ]
   }
  ],
@@ -172,7 +459,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
